mywork/force-app/main/default/objects/Unit_Test_Summary__c/Unit_Test_Summary__c.object-meta.xml
<CustomObject>
    <description>Summary of unit test results</description>
    <label>Unit Test Summary</label>
    <nameField>
        <displayFormat>UTS-{00000}</displayFormat>
        <label>Unit Test Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Test Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>