mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Apex_Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Apex_Code_Coverage__c</fullName>
    <formula>IF(Apex_Total_LOC__c  != 0 ,   Apex_Lines_Covered__c  /   Apex_Total_LOC__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total code coverage of all Apex classes and triggers.  75% is needed to pass.</inlineHelpText>
    <label>Apex Code Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>