mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Apex_Lines_Covered__c.field-meta.xml
<CustomField>
    <fullName>Apex_Lines_Covered__c</fullName>
    <inlineHelpText>The total number of Apex lines covered</inlineHelpText>
    <label>Apex Lines Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>