mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Apex_Test_Time__c.field-meta.xml
<CustomField>
    <fullName>Apex_Test_Time__c</fullName>
    <inlineHelpText>The time (in seconds) it took to run all apex tests.</inlineHelpText>
    <label>Time (s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>