mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Apex_Total_LOC__c.field-meta.xml
<CustomField>
    <fullName>Apex_Total_LOC__c</fullName>
    <inlineHelpText>The total number of lines of apex code</inlineHelpText>
    <label>Apex Total Lines of Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>