mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates when a test run is finished. Used to trigger email notification workflow.</description>
    <inlineHelpText>Indicates when a test run is finished. Used to trigger email notification workflow.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>