mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <inlineHelpText>Log field for detailed error messages from testing.</inlineHelpText>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>