mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Failed_Apex_Tests__c.field-meta.xml
<CustomField>
    <fullName>Failed_Apex_Tests__c</fullName>
    <inlineHelpText>The total number of failed Apex Test methods.</inlineHelpText>
    <label>Failed Apex Tests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>