mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The instance where the unit tests were run</description>
    <label>Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>Unit Test Summaries</relationshipLabel>
    <relationshipName>Unit_Test_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>