mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>IF(System_Error__c, "Fail",
IF(AND(Failed_Apex_Tests__c = 0, Apex_Code_Coverage__c = 0, Apex_Total_LOC__c = 0), "Pass",
IF(AND(Failed_Apex_Tests__c = 0, Apex_Code_Coverage__c >= 0.75), "Pass", "Fail" )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The overall test result.  Total Coverage must be 75% or higher and there are no failed test results.</inlineHelpText>
    <label>Result</label>
    <type>Text</type>
</CustomField>