mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Success_Rate__c</fullName>
    <formula>IF( Total_Apex_Unit_Tests__c  != 0 , (  Total_Apex_Unit_Tests__c  -  Failed_Apex_Tests__c  )  /   Total_Apex_Unit_Tests__c  , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of passing tests.</inlineHelpText>
    <label>Success Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>