mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <inlineHelpText>The test date.</inlineHelpText>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>