mywork/force-app/main/default/objects/Unit_Test_Summary__c/fields/Total_Apex_Unit_Tests__c.field-meta.xml
<CustomField>
    <fullName>Total_Apex_Unit_Tests__c</fullName>
    <inlineHelpText>The total number of Apex Test methods. .</inlineHelpText>
    <label>Total Apex Unit Tests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>